syntax = "proto3";

package verifier;

option go_package = "github.com/salrashid123/tls_ak/verifier";

service Verifier {
  rpc GetEK (GetEKRequest) returns (GetEKResponse) { }
  rpc GetAK (GetAKRequest) returns (GetAKResponse) { }
  rpc Attest (AttestRequest) returns (AttestResponse) { }
  rpc Quote (QuoteRequest) returns (QuoteResponse) { } 
  rpc GetTLSKey (GetAttestedKeyRequest) returns (GetAttestedKeyResponse) { }   
}

enum KeyType {
  TLS = 0;
  Signature = 1;
  Encryption = 2;
  AES = 3;
}  


message GetEKRequest {}

message GetEKResponse {
  bytes ekPub = 1;
  bytes ekCert = 2;
}

message GetAKRequest {}

message GetAKResponse {
  bytes attestation_parameters = 1;
}

message AttestRequest {
  bytes encryptedCredentials = 1;
}

message AttestResponse {
  bytes secret = 1;
}

message QuoteRequest {
  bytes nonce = 1;
}

message QuoteResponse {
  bytes platformAttestation = 1;
}

message GetAttestedKeyRequest {
  string kid = 1;
  KeyType key_type = 2;
}

message GetAttestedKeyResponse {
  bytes certificate = 1;
  bytes keyCertification = 2;
}

